HOLY FUCK IT WORKS

--- a/js/libs/video_js/demo.html
+++ b/js/libs/video_js/demo.html
@@ -4,7 +4,7 @@
   <title>Video.js | HTML5 Video Player</title>
 
   <!-- Chang URLs to wherever Video.js files will be hosted -->
-  <link href="video-js.css" rel="stylesheet" type="text/css">
+  <link href="../../../css/libs/video-js.css" rel="stylesheet" type="text/css">
   <!-- video.js must be in the <head> for older IEs to work. -->
   <script src="video.js"></script>
 
@@ -12,7 +12,9 @@
   <script>
     videojs.options.flash.swf = "video-js.swf";
   </script>
-
+    <script type="text/javascript">
+        document.createElement('video');document.createElement('audio');
+    </script>
 
 </head>
 <body>
